--- a/papers/LOPSRT-23/conclusion.tex
+++ b/papers/LOPSRT-23/conclusion.tex
@@ -1,9 +1,7 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-We presented here the first iteration of \textsc{Java} generics type solver implementation using relational verifier-to-solver
-conversion technique. While the solver does not demonstrate desirable performance yet this work nevertheless showcases all
-major steps, properties, and caveats of the approach we advocate. We consider the development and application of problem-specific
-optimizations of the solver as the main direction for future research. Our prior experience shows that such optimizations
-can boost the performance of the solver to the level neccessary to be used as a component in a symbolic execution engine for verification
-and testing of real-world \textsc{Java} applications.
+We presented here the \textsc{Java} generics type solver implemented using relational verifier-to-solver
+conversion technique. Our work showcases all major steps, properties, and caveats of the approach we advocate.
+The solver demonstrates a promising performance and we consider integrating it into a production-level
+symbolic execution engine as a main task of our future work.
