--- a/papers/LOPSRT-23/java.tex
+++ b/papers/LOPSRT-23/java.tex
@@ -25,7 +25,7 @@ can be specified for a generic class/interface:
 
 Here $C$ is the class/interface being declared, $\alpha_i^{U_i}$~--- its generic parameters with upper
 bounds, $S_i$~--- its direct supertypes, among which only one type can be a class type, $T^j_l$~--- type
-parameters for direct supertypes, which may contain the occurences of $\alpha_i$; note: neither of $T^j_l$ can be
+parameters for direct supertypes, which may contain the occurrences of $\alpha_i$; note: neither of $T^j_l$ can be
 an intersection type.
 
 Type variables in scopes of their declarations behave like regular types; the scope of a type variable is
@@ -72,7 +72,7 @@ argument by a freshly introduced \emph{named} type variable, thus ``capturing'' 
 type in a certain context. The motivation for introducing capture conversion is as follows: let us have
 some value of a wildcard-parameterized type, say, some collection of type $\grc{Collection}{?}$. Without capture
 conversion we would be incapable of dealing with individual elements of this collection (since a wildcard is not a type,
-but rather a way to to describe a certain parameterizarion). From a type-theoretic standpoint wildcards intoduce a
+but rather a way to to describe a certain parameterization). From a type-theoretic standpoint wildcards introduce a
 certain form of \emph{existential} types with capture conversion serving as a limited form of opening construct~\cite{tapl}.
 The detailed theory and the discussion of properties for the wildcard-related fragment of Java Generics type system
 can be found in~\cite{wild}.
