--- a/papers/LOPSRT-23/intro.tex
+++ b/papers/LOPSRT-23/intro.tex
@@ -16,6 +16,7 @@ which gives us a solver with a promising efficiency. As subtyping relation in \t
 however due to the completeness of relational search~\cite{certified} it ultimately finds all existing solutions. We do not claim our current result to be an ultimate achievement; 
 however is demonstrates pretty well the advantages and caveats of relational programming approach we investigate.
 
+We sincerely appreciate all valuable comments and suggestions made by the reviewers which helped us to improve the quality of the manuscript and discover a few directions for future research.
 
 \begin{comment}
 so this paper additionally addresses the problem of developing type solver applicable for accurate symbolic execution.
